[gd_scene load_steps=5 format=2]

[ext_resource path="res://entities/portal/portal.gd" type="Script" id=1]
[ext_resource path="res://assets/sprites/portal/portal.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 10.0

[sub_resource type="ParticlesMaterial" id=2]

render_priority = 0
trail_divisor = 1
emission_shape = 1
emission_sphere_radius = 12.0
flag_align_y = false
flag_rotate_y = false
flag_disable_z = true
spread = 0.0
flatness = 0.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 5.0
initial_velocity_random = 1.0
angular_velocity = 45.0
angular_velocity_random = 0.0
orbit_velocity = 0.1
orbit_velocity_random = 0.0
linear_accel = 0.0
linear_accel_random = 0.0
radial_accel = 0.0
radial_accel_random = 0.0
tangential_accel = 0.0
tangential_accel_random = 0.0
damping = 0.0
damping_random = 0.0
angle = 0.0
angle_random = 0.0
scale = 1.0
scale_random = 0.0
color = Color( 0.235294, 0.160784, 0.25098, 1 )
hue_variation = 0.0
hue_variation_random = 0.0
anim_speed = 0.0
anim_speed_random = 0.0
anim_offset = 0.0
anim_offset_random = 0.0
anim_loop = false
_sections_unfolded = [ "Color", "Emission Shape", "Gravity" ]

[node name="portal" type="Area2D" index="0"]

scale = Vector2( 2, 2 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="portalSprite" type="Sprite" parent="." index="0"]

texture = ExtResource( 2 )
_sections_unfolded = [ "Transform" ]

[node name="portalShape" type="CollisionShape2D" parent="." index="1"]

shape = SubResource( 1 )

[node name="portalTween" type="Tween" parent="." index="2"]

repeat = true
playback_process_mode = 1
playback_speed = 1.0
playback/active = false
playback/repeat = true
playback/speed = 1.0

[node name="portalParticles" type="Particles2D" parent="." index="3"]

emitting = true
amount = 16
lifetime = 3.0
one_shot = false
preprocess = 0.0
speed_scale = 0.5
explosiveness = 0.0
randomness = 1.0
fixed_fps = 0
fract_delta = true
visibility_rect = Rect2( -100, -100, 200, 200 )
local_coords = true
draw_order = 0
process_material = SubResource( 2 )
texture = null
normal_map = null
h_frames = 1
v_frames = 1
_sections_unfolded = [ "Process Material", "Time" ]

[connection signal="body_entered" from="." to="." method="_on_portal_body_entered"]


